--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wpm-calculator-react",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A React component for calculating reading time",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -28,7 +28,17 @@
     "typescript",
     "reading",
     "time",
-    "calculator"
+    "calculator",
+    "wpm",
+    "words",
+    "words per minute",
+    "words per minute calculator",
+    "words per minute react",
+    "words per minute react component",
+    "words per minute component",
+    "words per minute calculator react",
+    "words per minute calculator typescript",
+    "words per minute calculator react component"
   ],
   "dependencies": {
     "@babel/runtime": "^7.23.6",
